sqeeze image size

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -170,4 +170,15 @@
       s.parentNode.insertBefore(hm, s);
     })();
 </script>
+
+<script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?94e8f873afa2fbee02b1050180799786";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+</script>
+    
     
